<resources>
    <string name="app_name">AmulyaCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_services">Services</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">AYURVEDAM</string>
    <string name="tab_text_2">LADIES FITNESS</string>
    <string name="tab_text_3">BEAUTY CARE</string>
    <string name="nasyam">This treatment involves the administration of
        oils and liquids into the nostrils. It is useful for treatment of
        kapha-oriented problems, of ear, eyes, nose and it is effective in the treatments of
        migraine, sinusitis, convulsions ,cervical spondylosis, and frozen shoulder etc .</string>
    <string name="vamana">inducing vomiting specially for kapha related illnesses
        like asthma, coughs, chronic colds, psoriasis, acne, diabetes etc.
        Vamana oushadam will be given after fomentation</string>
    <string name="virechana">Virechana is the cleansing of the pitta and the purification of the blood toxins.
        Here, drugs that stimulate bowel movements are induced for the expulsion of excess Pita.
        Virechana is used for treatment of skin diseases, chronic fever, piles, abdominal tumors, worms,
        gout, jaundice, gastrointestinal problems, constipation and irritable bowel syndrome, vatha diseases etc.</string>
    <string name="raktamokshana">To remove impurities from the blood through leech therapy or other
        methods It is used for disorders such as urticaria, rash, eczema, acne, scabies,
        leucoderma, chronic itching etc.</string>
    <string name="vasti">Medicated enemas are used to promote elimination of the Vata dosha out through the rectum.
        introducing medicinal substances in a liquid medium into the rectum. vata disorders Such as sciatica, arthritis,
        rheumatism, neurodegenerative conditions, and gout etc </string>
    <string name="vasti1">
        2 types of vasthi are there
        1.Matra vasthi:-mainly warm medicated oils is administrated
        2.Kashaya vasthi:- mainly herbal decoction</string>
    <string name="yoga">Yoga is not a religion; It is a way of life that points
        to "a healthy mind in a healthy body".Man is a physical, mental and spiritual being;
        Yoga helps promote a balanced development of all three.Other forms of physical exercise,
        such as aerobics, ensure only physical well-being.Hey have little to do with the development
        of the spiritual or astral body. Yoga exercises recharge the body with cosmic energy and facilitates:
        Obtaining a perfect balance and harmony. Promotes self-healing. Eliminates negative blockages of mind and
        toxins from the body. Increases personal power*Increases self-awareness. Aid in attention, concentration
        and concentration, especially important for children. Reduces stress and tension in the physical body by
        activating the parasympathetic nervous system.</string>
    <string name="aboutus_1">Amulya is a traditional Kerala Ayurveda panchakarma hospital at Anantapur ,since
        2006 from God ’s own country ( Kerala ) which is renounced as cradle of Ayurveda .
        Through this glorious 7 years .Amulya became a branded name at anantapur </string>
    <string name="aboutus_2"> we provides treatments for most of the diseases with Kerala’s classical Ayurvedic medicines.
        Specialized Panchakarma treatments being given without surgery for Sinusitis , Headache, Cervical
        Spondylosis, Lumbar spondylosis, Sciatic pains , Osteo arthritis and Piles. We are providing classical
        panchakarma treatments by trained and well experienced therapists with the supervision of kerala doctor.
        We are also Providing services for ladies in Beauty Care and Fitness(Yoga and Meditation,Gym).</string>
    <string name="aerobics">Aerobic exercise is any physical activity that makes you sweat,
        makes you breathe stronger, and gets your heart doing faster than at rest.
        Strengthens the heart and lungs entry to your cardiovascular system to administer and administer
        oxygen more quickly and efficiently throughout your body. Aerobic exercise uses its large muscle groups,
        is rhythmic in nature,And it can be kept continuously for less than 10 minutes. Examples Physical activity
        such as walking, jogging, biking or aerobic dancing Examples of aerobic exercise .
        They strengthen the heart and lungs, thus improving the body's use of oxygen.</string>
    <string name="gym">An Effective Cleansing Therapy In Ayurveda Filling medicinal oil
        into the ears is termed as Karnapoornam, a purification and detoxification treatment in Ayurveda.
        It helps in removing stress and illness-causing toxins from your body while balancing the three doshas.
        In this therapy, warm herbal oils and fumes are applied to the Karna (ears) for 5 to 10 minutes
        followed by a massage around the ears and jaw area. Consequently, it helps in loosening wax,
        relieving neck and jaw tension and reducing itching, headaches and earaches.</string>
    <string name="hair_spa">Hair Spa is a therapeutic and rejuvenating spa treatment,
        inspired by the ancient rituals and traditions of the spa.
        This hair care program gives your hair an extraordinary sense of well-being and luxury.</string>
    <string name="hair_spa1">On the other hand, this hair spa concept can be customized to suit your requirements,
        in short, it lets you emerge revitalized and ready to claim life.</string>
    <string name="hair_cutting">The perfect haircut is more than just a few cuts!
        The Amulya Beauty Parlor team works with you to give you the best style of
        hairstyle that suits your face and personality.</string>
    <string name="hair_colouring">Whatever your style, in Amulya Beauty Clinic our expert
        colorists have been trained in the best techniques and latest trends using the best products.
        We will help you find the perfect shade to complement your look.</string>
    <string name="hair_colouring1">We offer a variety of high quality color formulas that allow you to get vibrant and durable results without damaging your hair as
        we only use Ammonia Free products. Make an appointment today! A little color of your hair to add flavor
        and some to cover gray hair. It is the quickest and easiest way to change your appearance.</string>
    <string name="pimples">Effective pimple / acne treatment is one that prevents scars and marks,
        heals existing pimples and keeps the future in the bay. Identifying the exact reason and treating
        accordingly helps the pimples to</string>
    <string name="pimples1">disappear for a longer time and sometimes forever.
        Very often, it means looking beyond the skin, into the hormonal factors and lifestyle and correcting them.
        Amulya Beauty Clinic solutions are designed to be holistic, starting with a detailed
        consultation to understand your skin and body, monitor triggers ranging from hormonal problems to
        poor choice of skin care products.</string>
    <string name="whitening">Facials are a strange group, at one point we had over 11 different types of facials!
        D-tan, equity, etc. etc. Now, after years of being in business and seeing what works best for our Honeyz,
        we have made the selection much simpler.</string>
    <string name="whitening1">Take a look at the simplified options below.
        Think of facials as something made to remove dead skin (exfoliating), while a "face cleaning" is something
        when we are unclogging the pores. Which of these is right for you? Well, it depends on the age,
        the skin type, etc., so come in and we will help you decide based on your skin.</string>
    <string name="sirovasthi">

Lukewarm medicated oils are poured into a cap fitted on the head and stagnated for a prescribed time according to patient’s condition.. Indication: Facial Paralysis, Paralysis, dryness of nostrils, mouth and throat, severe headaches, burning sensation of head and other Vata-borne Diseases, Hairfall, Thinning and greying of Hair etc.

    </string>
    <string name="sirodhara">
        In this procedure, herbal oils, medicated buttermilk or milk or decoction etc are poured slowly on the forehead ,from definite height and time .
        Indication: Insomnia, mental tension, Paralysis, headache, migraine, sinusitis, certain skin diseases, stress and strain, depression, hair care etc.
    </string>
    <string name="netratarpanam">

        It is a eye treatment, which gives a cooling effect to the eyes, prevents eye diseases and strengthens optic nerve, also improves eyesight..
Indications: due to TV, computer, pollution; tired eyes, watering of eyes, dimness of vision at night. It helps in preventing early formations of cataract.

    </string>
    <string name="karna">


    It involves filling the ears with medicated oil
    Indications: ears, earache, ear wax, tinnitus, tingling sensation in the ears etc

    </string>
    <string name="greeva">


   For this, specially prepared warm medicated oil is kept over the upper back within the herbal paste boundary.
Indications: cervical spondylitis .

    </string>
    <string name="kativasthi">

    For this, specially prepared warm medicated oil is kept over the lower back within the herbal paste boundary.
Indications: All types of back pain and spinal pain, slip disc, sciatica, spondylitis etc.
</string>
    <string name="slider_1">SIROVASTHI</string>
    <string name="slider_2">MUKHALEPAM</string>
    <string name="slider_3">NETRATARPANAM</string>
    <string name="vata">Vata skin type is generally dry, thin, cool to the touch and very delicate. It is vulnerable to harsh weather conditions, especially dry windy weather. This skin type age faster and tends to be dry, rough and very flaky when proper care is not taken.</string>
    <string name="kapha">This skin type is oily, thick and is very soft. It tends to age slowly and people with this skin type may face various problems such as enlarged pores, dull complexion, excessive oil, pimples and blackheads etc.</string>
    <string name="lowbackpain">Spondylosis, is a degenerative disorder that may cause loss of normal spinal structure and function..</string>
    <string name="lowbackpain_symptoms">localized pain, swelling, movement restriction , radiating pain and numbness in the lower limbs</string>
    <string name="lowbackpain_treatments">Internal medicines kadivasthi, massages ,kizhi ,Matra vasthi,Kashaya vasthi etc</string>
    <string name="cervicalpain">Spondylosis, is a degenerative disorder that may cause loss of normal spinal structure and function</string>
    <string name="cervicalpain_symptoms">localized pain, swelling, movement restriction , radiating pain and numbness in the upper limbs The first line of treatment will be internal medicines to reduce aama and regularize digestion then advise for massage and fomentation with leaves or powder .etc</string>
    <string name="cervicalpain_treatments">medicines greevavasthi, massages,kizhi,Nasyam etc</string>
    <string name="piles">According to ayurveda, haemorrhoids or piles are caused due to simultaneous vitiation of all the three doshas - vatta, kapha, and pitta</string>
    <string name="piles_symptoms">Constipation ,bleeding ,pain</string>
    <string name="piles_treatments">Internal medicines ,external treatments like leapanam, fumigation therapy</string>
</resources>