<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffae4">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e5deb0"
        android:layout_margin="20dp"

        >
        <TextView
            android:id="@+id/lowbackpain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lumbar Spondylosis"
            android:textColor="#004a4a"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lowbackpain"
            android:src="@drawable/backpain"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:id="@+id/backpain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowbackpain"
            android:layout_below="@id/image"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/lowbackpain_symptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Symptoms:-"
            android:textColor="#d63100"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_below="@id/backpain_text"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:id="@+id/lowbackpain_symptoms1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lowbackpain_symptoms"
            android:layout_below="@id/lowbackpain_symptoms"
            android:layout_toRightOf="@id/lowbackpain_symptoms1"

            />
        <TextView
            android:id="@+id/lowbackpain_treatments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Treatments :-"
            android:textColor="#d63100"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_below="@id/lowbackpain_symptoms1"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:id="@+id/lowbackpain_treatments1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lowbackpain_treatments"
            android:layout_below="@id/lowbackpain_treatments"
            android:layout_toRightOf="@id/lowbackpain_treatments1"

            />
    </RelativeLayout>

</LinearLayout>